@@ -1,3 +1,6 @@
+README from IDLE fork 0.7.1 :
+=============================
+
 EXPERIMENTAL LOADER IDLE 2000-05-29
 -----------------------------------
 
